# Center_of_Accident-Reborn

./: .gitignore  CMakeLists.txt  Center_of_Accident.sln  README.md
Core/AutoGenHeaders/: IStats.h  StaticStatsDust.h  StaticStatsProjectile.h  StaticStatsUfo.h
Core/Command/: ActionHandler.cpp  FireCommand.cpp  MovementCommand.h
Core/Config/: Config.cpp
Core/Engine/Command/: ActionHandler.cpp  ActionHandler.h  Command.cpp  Command.h  FireCommand.h  InputState.h  MovementCommand.cpp
Core/Engine/Config/: Config.h
Core/Engine/Network/: ClientNetworkSystem.cpp  ClientNetworkSystem.h  NetworkCommon.h  ServerNetworkSystem.h
Core/Engine/Utility/: Utility.h
Core/Game/: ClientGame.cpp  ClientNetworkSystem.cpp  ClientNetworkSystem.h  CollisionSystem.cpp  CollisionSystem.h  Game.cpp  Game.h  GameSession.h  GameTime.h  Render.cpp  Render.h  ServerGame.cpp  ServerNetworkSystem.h  SoundManager.cpp  SoundManager.h
Core/Gameplay/Game/: ClientGame.cpp  ClientGame.h  ServerGame.cpp  ServerGame.h
Core/Gameplay/WorldObjects/Architecture/: DestructibleObject.h  MovableObject.h  StaticObject.cpp  StaticObject.h
Core/Gameplay/WorldObjects/CharacterFactory/: CharacterFactory.cpp
Core/Gameplay/WorldObjects/Controller/: AIPlayerController.cpp  AIPlayerController.h  HumenPlayerController.cpp
Core/Gameplay/WorldObjects/MapObject/: AICharacter.h  PlayerCharacter.h  Projectile.h
Core/Gameplay/WorldObjects/World/: World.cpp
Core/Network/: ClientNetworkSystem.h  NetworkCommon.h  ServerNetworkSystem.h
Core/NetworkCommon/: Client.h  NetworkCommon.h  Server.h
Core/Systems/Health/: HealthSystem.cpp  HealthSystem.h
Core/Systems/Render/: Render.cpp
Core/Systems/Spawn/: SpawnSystem.cpp  SpawnSystem.h
Core/UI/: HPLabel.cpp  HPLabel.h  InitialWindow.h  MapHUD.cpp  MapHUD.h  UIElement.cpp  UIElement.h  UIType.h
Core/UI/Screens/: GameScreen.cpp  GameScreen.h  InitialWindow.cpp  MainMenuScreen.cpp  MainMenuScreen.h  Screen.h  ScreenManager.cpp  ScreenManager.h
Core/UI/UIElement/: HPLabel.cpp  UIElement.cpp  UIElement.h
Core/Utility/: ImplSingleton.cpp  ImplSingleton.h  Utility.cpp
Core/WorldObjects/Architecture/: DestructibleObject.cpp  DestructibleObject.h  MovableObject.cpp  StaticObject.cpp  StaticObject.h
Core/WorldObjects/CharacterFactory/: CharacterFactory.cpp  CharacterFactory.h
Core/WorldObjects/Controller/: AIPlayerController.cpp  HumenPlayerController.cpp  HumenPlayerController.h  IPlayerController.cpp  IPlayerController.h
Core/WorldObjects/Controller/BehaviorState/: BehaviorState.cpp  BehaviorState.h
Core/WorldObjects/MapObject/: Projectile.h
Core/WorldObjects/World/: World.h
Resources/Config/: UIConfig.xml  autogeneration.xml  config.cfg
main/: main.cpp
